# grpc-filesystem

./: README.md
fs-server/: Cargo.toml  README.md  build.rs
fs-server/src/: lib.rs
manual-client/: example.wasm  main.js  package-lock.json  package.json
manual-client/lsrec/: Cargo.toml  lsrec.wasm
manual-client/lsrec/src/: lib.rs
proto/: fs.proto
server/: Cargo.toml  justfile
server/src/: lib.rs
