[package]
name = "server"
version = "0.1.0"
authors = ["Ryan P. Brewster <RyanPBrewster@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.8"
log   = "0.4"
prost = "0.7"
tokio = { version = "1.16", features = ["macros", "rt-multi-thread"] }
tonic = "0.4"
wasmer-runtime = "0.17"

[build-dependencies]
tonic-build = "0.4"
